# NFDI4IngModelValidationPlatform

./: .gitignore  docker_setup.md  environment_benchmarks.yml  mkdocs.yml
.github/workflows/: docker_ci.yml  run-benchmark-docker.yml  run-benchmark-examples.yml  run-benchmark.yml  run-dumux-benchmark.yml  run-edelweiss-benchmark.yml  run-julia-benchmark.yml  run-openfoam-benchmark.yml
benchmarks/common/: create_provenance.py  create_rocrate.py  nextflow.config  parameter_extractor.py  plot_provenance.py  provenance.py  semantic_benchmark.py  simulation_tool_snakefile_generator.py  snakefile_template.txt  utils.py  (+3 more)
benchmarks/rotating-cylinders/dumux/dumuxModule/: CMakeLists.txt  README.md  cmake.opts  config.h.cmake  dumuxModule.pc.in  dune.module
benchmarks/rotating-cylinders/dumux/dumuxModule/doc/doxygen/: Doxylocal
benchmarks/rotating-cylinders/dumux/dumuxModule/test/freeflow/: CMakeLists.txt
benchmarks/rotating-cylinders/dumux/dumuxModule/test/freeflow/navierstokes/: CMakeLists.txt
benchmarks/rotating-cylinders/dumux/dumuxModule/test/freeflow/navierstokes/rotatingcylinders/: params.input
dockerfiles/: Dockerfile  Dockerfile.base  Dockerfile.fenics  Dockerfile.kratos  Dockerfile.mesh  Dockerfile.postprocessing  Dockerfile_base_env_ready
docs/: benchmark_addition_guide.md  introduction.md  literature.bib  parameter_json_description.md
local_workflow/: build_all_images.sh  config.sh  local_workflow.sh  platform_utils.sh  run_all_benchmarks.sh  run_linear-elastic-plate-with-hole.sh
notebooks/: plate_with_hole_Kratos.ipynb  plate_with_hole_fenics.ipynb
(+126 files in other folders)
